--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Logo -->
             <div class="row text-center">
                 <div class="col-12 bg">
-                    <a href="index.html"><img class="img-fluid logo" id="header" src="Images/logo.png"></a>
+                    <a href="index.html"><img class="img-fluid logo" id="header" src="images/logo.png"></a>
                 </div>
             </div>
             <!-- End Logo -->
@@ -35,7 +35,7 @@
             <!-- Nav -->
             <nav class="navbar navbar-expand-md justify-content-center">
                 <ul class="navbar-nav text-uppercase">
-                    <li class="nav-item"><a href="index.html" class="nav-link  active"><i class="bi-house-door-fill"></i> Home</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link active"><i class="bi-house-door-fill"></i> Home</a></li>
                     <li class="nav-item"><a href="members.html" class="nav-link"><i class="bi-file-person"></i> Members</a></li>
                     <li class="nav-item"><a href="discography.html" class="nav-link"><i class="bi-disc"></i> Discography</a></li>
                     <li class="nav-item"><a href="gallery.html" class="nav-link"><i class="bi-image"></i> Gallery</a></li>
@@ -58,22 +58,22 @@
                         <!-- Images -->
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="Images/gallery/pic01.jpg" alt="The Band" width="1100" height="500">
+                            <img src="images/gallery/pic01.jpg" alt="The Band" width="1100" height="500">
                           </div>
                           <div class="carousel-item">
-                            <img src="Images/gallery/pic02.jpg" alt="The Band" width="1100" height="500">
+                            <img src="images/gallery/pic02.jpg" alt="The Band" width="1100" height="500">
                           </div>
                           <div class="carousel-item">
-                            <img src="Images/gallery/pic04.jpg" alt="The Band" width="1100" height="500">
+                            <img src="images/gallery/pic04.jpg" alt="The Band" width="1100" height="500">
                           </div>
                           <div class="carousel-item">
-                            <img src="Images/gallery/pic05.jpg" alt="The Band" width="1100" height="500">
+                            <img src="images/gallery/pic05.jpg" alt="The Band" width="1100" height="500">
                           </div>
                           <div class="carousel-item">
-                            <img src="Images/gallery/pic06.jpg" alt="The Band" width="1100" height="500">
+                            <img src="images/gallery/pic06.jpg" alt="The Band" width="1100" height="500">
                           </div>
                           <div class="carousel-item">
-                            <img src="Images/gallery/pic07.jpg" alt="The Band" width="1100" height="500">
+                            <img src="images/gallery/pic07.jpg" alt="The Band" width="1100" height="500">
                           </div>
                         </div>
                         
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 my-auto bg">
-                    <img src="Images/pic09.jpg" alt="The Band">
+                    <img src="images/pic09.jpg" alt="The Band">
                 </div>
                 <div class="col-md-7 bg">
                     <p><h3>Formation</h3></p>
@@ -133,7 +133,7 @@
                     <p>Joy Division were approached by RCA Records to record a cover of Nolan "N.F." Porter's "Keep on Keepin' On" at a Manchester recording studio. The band spent late March and April 1978 writing and rehearsing material. During the Stiff/Chiswick Challenge concert at Manchester's Rafters club on 14 April, they caught the attention of music producer Tony Wilson and manager Rob Gretton. Curtis berated Wilson for not putting the group on his Granada Television show So It Goes; Wilson responded that Joy Division would be the next band he would showcase on TV. Gretton, the venue's resident DJ, was so impressed by the band's performance that he convinced them to take him on as their manager. Gretton, whose "dogged determination" was later credited for much of the band's public success, contributed the business skills to provide Joy Division with a better foundation for creativity. Joy Division spent the first week of May 1978 recording at Manchester's Arrow Studios. The band were unhappy with the Grapevine Records head John Anderson's insistence on adding synthesiser into the mix to soften the sound, and asked to be dropped from the contract with RCA.</p>
                 </div>
                 <div class="col-md-5 my-auto bg">
-                    <img src="Images/pic10.jpg" alt="The Band">
+                    <img src="images/pic10.jpg" alt="The Band">
                 </div>
             </div>
 
