--- a/members.html
+++ b/members.html
@@ -27,7 +27,7 @@
             <!-- Logo -->
             <div class="row text-sm-center">
                 <div class="col-sm-12 bg">
-                    <a href="index.html"><img class="img-fluid logo" id="header" src="Images/logo.png"></a>
+                    <a href="index.html"><img class="img-fluid logo" id="header" src="images/logo.png"></a>
                 </div>
             </div>
 
