--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
     <header>
         <div class="container">
             <!-- Logo -->
-            <div class="row text-sm-center">
+            <div class="row text-center">
                 <div class="col-sm-12 bg">
                     <a href="index.html"><img class="img-fluid logo" id="header" src="images/logo.png"></a>
                 </div>
@@ -62,6 +62,9 @@
                     <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gallery/pic11.jpg" data-lightbox="photos"><img class="img-fluid" src="images/gallery/pic11.jpg"></a></div>
                     <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gallery/pic12.jpg" data-lightbox="photos"><img class="img-fluid" src="images/gallery/pic12.jpg"></a></div>
                     <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gallery/pic13.jpg" data-lightbox="photos"><img class="img-fluid" src="images/gallery/pic13.jpg"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gallery/pic14.jpg" data-lightbox="photos"><img class="img-fluid" src="images/gallery/pic14.jpg"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gallery/pic15.jpg" data-lightbox="photos"><img class="img-fluid" src="images/gallery/pic15.jpg"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gallery/pic16.jpg" data-lightbox="photos"><img class="img-fluid" src="images/gallery/pic16.jpg"></a></div>
                 </div>
             </div>
         </div>
