--- a/members.html
+++ b/members.html
@@ -25,7 +25,7 @@
     <header>
         <div class="container">
             <!-- Logo -->
-            <div class="row text-sm-center">
+            <div class="row text-center">
                 <div class="col-sm-12 bg">
                     <a href="index.html"><img class="img-fluid logo" id="header" src="images/logo.png"></a>
                 </div>
