--- a/error404.html
+++ b/error404.html
@@ -35,7 +35,7 @@
             <!-- Nav -->
             <nav class="navbar navbar-expand-md justify-content-center">
                 <ul class="navbar-nav text-uppercase">
-                    <li class="nav-item"><a href="index.html" class="nav-link  active"><i class="bi-house-door-fill"></i> Home</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link "><i class="bi-house-door"></i> Home</a></li>
                     <li class="nav-item"><a href="members.html" class="nav-link"><i class="bi-file-person"></i> Members</a></li>
                     <li class="nav-item"><a href="discography.html" class="nav-link"><i class="bi-disc"></i> Discography</a></li>
                     <li class="nav-item"><a href="gallery.html" class="nav-link"><i class="bi-image"></i> Gallery</a></li>
